Bug 275639 - untranslatable names of dynamic playlists "Rock and Pop", "Album play", "Rating"
Summary: untranslatable names of dynamic playlists "Rock and Pop", "Album play", "Rating"
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Playlists/Dynamic Playlists (other bugs)
Version First Reported In: 2.4-GIT
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: 2.4.2
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-06-14 16:53 UTC by Alexander Potashev
Modified: 2011-06-19 14:03 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.4.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Potashev 2011-06-14 16:53:11 UTC
Version:           2.4-GIT
OS:                Linux

Names of dynamic playlists "Rock and Pop", "Album play", "Rating" are untranslatable.
See src/dynamic/DynamicModel.cpp, lines #920, #926, and #935.

Reproducible: Always
Comment 1 Myriam Schweingruber 2011-06-19 14:03:37 UTC
Git commit 4f0e106f3448fc96188af675b401d486b079799d by Ralf Engels.
Committed on 16/06/2011 at 13:06.
Pushed by rengels into branch 'master'.

Fix untranslatable dynamic playlist names.

BUG: 275639

M  +3    -3    src/dynamic/DynamicModel.cpp

http://commits.kde.org/amarok/4f0e106f3448fc96188af675b401d486b079799d