Fix untranslatable dynamic playlist names.

BUG: 275639